<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">


    <!-- android:gravity 是作用在 view 裡的內容．比如一個 button 上面的 text。你可以設置該 text 在 view 裡是靠左、靠右等位置。 -->
    <!-- android:layout_gravity 是用來設置該 view 相對於父 view 的位置。比如一個 button 在 LinearLayout 裡，你想讓該 button 在 LinearLayout 裡是靠左、靠右等位置。 -->

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="140dp"
        android:layout_marginRight="16dp"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:alpha="0"
            android:text="@string/text_tvTitle"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
            android:textColor="@android:color/black"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvTitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:alpha="0"
            android:gravity="center"
            android:text="@string/text_tvTitle2"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle.Inverse"
            android:textColor="@android:color/darker_gray"
            android:textSize="24sp"
            android:textStyle="italic" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmp_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            app:counterEnabled="true"
            app:counterMaxLength="10"
            app:errorEnabled="true">

            <!--counterEnabled - 開啟計數器
                counterMaxLength - 計數長度
                errorEnabled - 錯誤提醒
                passwordToggleEnabled - 密碼隱藏眼睛   -->

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmp_id"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/hint_Emp_id"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/hint_etPassword"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="5dp"
            android:onClick="onLoginClick"
            android:text="@string/text_btnLogin"
            android:theme="@style/button_style" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="140dp"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/ic_logo"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/etUrl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:ems="15"
        android:inputType="textPersonName"
        android:text="http://192.168.43.20:8081/DA106G1_0501/"
        android:visibility="invisible"/>


    <Button
        android:id="@+id/btnMobile"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="40dp"
        android:text="Mobile"
        android:textSize="10sp"
        android:visibility="invisible" />

    <Button
        android:id="@+id/btnWifi"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="96dp"
        android:text="Wifi"
        android:textSize="10sp"
        android:visibility="invisible" />

    <Button
        android:id="@+id/btnSetUrl"
        android:background="@color/colorOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="176dp"
        android:text="Set URL"
        android:textSize="10sp"
        android:visibility="invisible" />
<!--  android:ems="10" EdiText元件長度  -->

</FrameLayout>